# example-Oatpp-Svelte-login

./: .gitignore  .gitmodules
backend/: CMakeLists.txt
backend/database/: dockerfile
backend/lib/: CMakeLists.txt
backend/sql/Users/: 001_init.sql
backend/src/: App.cpp  AppComponent.hpp  CMakeLists.txt  SwaggerComponent.hpp
backend/src/Controller/: DefaultController.hpp  FrontendController.hpp  UserController.hpp
backend/src/DTOs/: ConfigDTO.hpp  DTOs.hpp  StatusDTO.hpp  UserDTOs.hpp
backend/src/Database/: DatabaseComponent.hpp  UserDb.hpp
backend/src/Database/Models/: UserModel.hpp
backend/src/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.hpp
backend/src/Users/: Users.cpp  Users.hpp  UsersComponent.hpp
backend/src/Users/Auth/: Auth.cpp  Auth.hpp
backend/src/Users/Auth/Interceptor/: Interceptor.cpp  Interceptor.hpp
backend/src/Users/Auth/JWT/: JWT.cpp  JWT.hpp
backend/tests/: CMakeLists.txt
frontend/: package-lock.json  package.json  svelte.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/.svelte-kit/types/src/routes/login/signup/: $types.d.ts
frontend/src/lib/: api.ts
frontend/src/lib/stores/: error.ts  user.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/login/signup/: +page.svelte
